Created tabs for each mentee on the mentor dashboard

--- a/app/views/dashboard/_mentee_dashboard_af.html.erb
+++ b/app/views/dashboard/_mentee_dashboard_af.html.erb
@@ -6,40 +6,46 @@
       <%= render 'program_card' %>
     </div>
   </div>
+
   <!-- Right Section: Main Content -->
   <div class="grid md:grid-cols-2 sm:grid-cols-1">
     <div class="flex flex-col gap-3">
       <h1 class="text-2xl font-semibold text-[#202020] mb-2">
-        Your Mentor
+        Your <%= @role == 'mentee' ? 'Mentor' : 'Mentees' %>
       </h1>
-      <div id="mentor-card-<%= current_user.current_user_mentor.id %>" class="bg-[#FFFFFF] flex-col border-slate-300 rounded-lg min-x[438px] max-w-[438px]">
-        <div class="flex justify-between pt-6 px-6 items-center">
-          <div class="flex gap-5">
-            <img src=<%= asset_path('sample_img/mentor_sample.png') %> alt="mentor_profile_picture" class="size-14 object-cover rounded-lg border">
-            <div class="flex flex-col justify-center">
-              <b class="text-lg text-[#202020] font-bold"><%= current_user.current_user_mentor.name %></b>
-              <p class="text-xs text-[#202020] mb-2.5"><%= current_user.current_user_mentor.title %></p>
+
+      <% records = @role == 'mentee' ? [current_user.current_user_mentor] : current_user.current_user_mentees %>
+      <% records.each do |record| %>
+        <div id="mentor-card-<%= record.id %>" class="bg-[#FFFFFF] flex-col border-slate-300 rounded-lg min-x[438px] max-w-[438px]">
+          <div class="flex justify-between pt-6 px-6 items-center">
+            <div class="flex gap-5">
+              <img src=<%= asset_path('sample_img/mentor_sample.png') %> alt="profile_picture" class="size-14 object-cover rounded-lg border">
+              <div class="flex flex-col justify-center">
+                <b class="text-lg text-[#202020] font-bold"><%= record.name %></b>
+                <p class="text-xs text-[#202020] mb-2.5"><%= record.title %></p>
+              </div>
             </div>
+            <button class="text-xs w-[70.073px] h-[32px] bg-[#202020] text-[#FFFFFF] border border-transparent rounded-md hover:bg-transparent hover:text-[#202020] hover:border-[#202020]"
+                    onclick="location.href='<%= profile_path(record.id) %>'">
+              View
+            </button>
           </div>
-          <button class="text-xs w-[70.073px] h-[32px] bg-[#202020] text-[#FFFFFF] border border-transparent rounded-md hover:bg-transparent hover:text-[#202020] hover:border-[#202020]"
-                  onclick="location.href='<%= profile_path(current_user.current_user_mentor.id) %>'">
-            View
-          </button>
-        </div>
-        <div class="w-full border-t border-[#DCDCDC] my-4"></div>
-        <div class="flex flex-col px-5 gap-2">
-          <div class="flex gap-1.5">
-            <% current_user.current_user_mentor.skills_array.each do |skill| %>
-              <p class="text-xs text-[#202020] bg-[#EEF6F8] rounded-md py-0.5 px-1"><%= skill %></p>
-            <% end %>
+          <div class="w-full border-t border-[#DCDCDC] my-4"></div>
+          <div class="flex flex-col px-5 gap-2">
+            <div class="flex gap-1.5">
+              <% record.skills_array.each do |skill| %>
+                <p class="text-xs text-[#202020] bg-[#EEF6F8] rounded-md py-0.5 px-1"><%= skill %></p>
+              <% end %>
+            </div>
+            <p class="text-xs text-[#898989] mb-5">
+              <%= record.bio.length > 150 ? record.bio[0...150] + '...' : record.bio %>
+            </p>
           </div>
-          <p class="text-xs text-[#898989] mb-5">
-            <%= current_user.current_user_mentor.bio.length > 150 ? current_user.current_user_mentor.bio[0...150] + '...' : current_user.current_user_mentor.bio %>
-          </p>
         </div>
-      </div>
-      <%= render 'meetings_card' %>
+        <%= render 'meetings_card', record: record %>
+      <% end %>
     </div>
+
     <div class="md:my-5">
       <%= render 'calendar' %>
     </div>
