--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,9 +1,6 @@
 <div class="mt-20">
   <% if @role == "mentor" %>
-    <h1>Welcome, Mentor!</h1>
-    <% @mentors_data.each do |mentor| %>
-      <h3><%= mentor.id %></h3>
-    <% end %>
+    <%= render partial: "mentee_dashboard", locals: { mentors_data: @mentors_data } %>
   <% elsif @role == "mentee" %>
     <%= render partial: "mentee_dashboard", locals: { mentors_data: @mentors_data } %>
   <% elsif @role == "admin" %>
