--- a/app/views/dashboard/_admin_sidebar.html.erb
+++ b/app/views/dashboard/_admin_sidebar.html.erb
@@ -75,7 +75,7 @@
               <li class="hover:bg-gray-100 p-2 rounded transition-colors duration-200">Surveys</li>
               <li class="hover:bg-gray-100 p-2 rounded transition-colors duration-200">Email Templates</li>
               <li class="hover:bg-gray-100 p-2 rounded transition-colors duration-200">
-                <%= link_to "Matches", get_with_cohort_matches_path(cohort_id: cohort.id), class: "text-black" %>
+                <%= link_to "Matches", matches_path(cohort_id: cohort.id), class: "text-black" %>
               </li>
               <li class="hover:bg-gray-100 p-2 rounded transition-colors duration-200">Calendar</li>
             </ul>
