--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,17 +1,46 @@
-<div class="mt-[10rem]">
+<div class="mt-[5rem] mx-[5rem]">
   <p style="color: green"><%= notice %></p>
 
-  <h1>Matches</h1>
+  <h1 class="text-2xl font-bold text-black mb-6 text-left">
+    Matches for <%=@cohort.cohort_name%>
+  </h1>
 
-  <div id="matches">
-    <% @matches.each do |match| %>
-      <%= render match %>
-      <p>
-        <%= link_to "Show this match", match %>
-      </p>
+  <div class="overflow-x-auto rounded-lg shadow-lg"id="matches">
+    <% if @matches.any?%>
+      <% count = 1 %>
+      <table class="min-w-full bg-white border border-gray-300 divide-y divide-gray-200">
+        <thead class="bg-[#202020]">
+          <tr>
+            <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Count</th>
+            <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Mentor</th>
+            <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Mentee</th>
+            <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Matched Date</th>
+            <th class="py-3 px-6 text-left text-xs font-semibold text-white uppercase tracking-wider">Active</th>
+          </tr>
+        </thead>
+        <% @matches.each do |match| %>
+          <tbody class="divide-y divide-gray-200" id="members-container">
+            <tr class="member-item hover:bg-gray-50">
+              <td class="py-4 px-6 text-sm"><%= count %></td>
+              <td class="py-4 px-6 text-sm">
+                <%= match.mentor.name %> (<%= match.mentor_id %>)
+              </td>
+              <td class="py-4 px-6 text-sm">
+                <%= match.mentee.name %> (<%= match.mentee_id %>)
+              </td>
+              <td class="py-4 px-6 text-sm">
+                <% date = match.created_at %>
+                <%= date.strftime("%Y-%m-%d") %>
+              </td>
+              <td class="py-4 px-6 text-sm"><%= match.active ? "Yes" : "No" %></td>
+            </tr>
+          </tbody>
+          <% count += 1%>
+        <% end %>
+      </table>
+    <% else %>
+      <h1>No Matches for <%=@cohort.cohort_name %></h1>
     <% end %>
   </div>
-
-  <%= link_to "New match", new_match_path %>
-
+  <%# <%= link_to "New match", new_match_path %> 
 </div>
