--- a/app/views/dashboard/_admin_sidebar.html.erb
+++ b/app/views/dashboard/_admin_sidebar.html.erb
@@ -75,7 +75,7 @@
               <li class="hover:bg-gray-100 p-2 rounded transition-colors duration-200">Surveys</li>
               <li class="hover:bg-gray-100 p-2 rounded transition-colors duration-200">Email Templates</li>
               <li class="hover:bg-gray-100 p-2 rounded transition-colors duration-200">
-                <%= link_to "Matches", matches_path(cohort_id: cohort.id), class: "text-black" %>
+                <%= link_to "Matches", matches_path(cohort_id: cohort.id), class: "text-black" %> 
               </li>
               <li class="hover:bg-gray-100 p-2 rounded transition-colors duration-200">Calendar</li>
             </ul>
@@ -109,13 +109,11 @@
     </div>
     <div 
   id="create_cohort_modal" 
-  class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50"
->
+  class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
       <div class="bg-white p-8 rounded-lg shadow-lg w-[30rem] relative">
         <button 
       class="absolute top-2 right-2 text-gray-500 hover:text-gray-700"
-      onclick="closeModal('create_cohort_modal')"
-    >
+      onclick="closeModal('create_cohort_modal')">
           <i class="fas fa-times"></i>
         </button>
         <!-- Cohort Form Partial -->
