--- a/app/views/matches/_form.html.erb
+++ b/app/views/matches/_form.html.erb
@@ -1,9 +1,10 @@
-<%= form_with(model: match) do |form| %>
+<%= form_with(model: match, class: "space-y-4") do |form| %>
   <% if match.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(match.errors.count, "error") %> prohibited this match from being saved:</h2>
-
-      <ul>
+    <div class="bg-red-100 text-red-700 p-4 rounded-lg">
+      <h2 class="font-semibold mb-2">
+        <%= pluralize(match.errors.count, "error") %> prohibited this match from being saved:
+      </h2>
+      <ul class="list-disc pl-5">
         <% match.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
@@ -11,32 +12,24 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :matches, style: "display: block" %>
-    <%= form.text_field :matches %>
+  <%= form.hidden_field :match_id, value: match.id %>
+  <%= form.hidden_field :cohort_id, value: cohort.id %>
+  <%= form.hidden_field :updated_at, value: @current_time_in_user_zone %>
+
+  <div class="flex flex-col mb-4">
+    <%= form.label :mentor_id, class: "font-medium mb-1"%>
+    <%= form.text_field :mentor_id_id, value: match.mentor.id,
+                       class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500"  %>
   </div>
 
-  <div>
-    <%= form.label :mentor_id_id, style: "display: block" %>
-    <%= form.text_field :mentor_id_id %>
+  <div class="flex flex-col mb-4">
+    <%= form.label :mentee_id, class: "font-medium mb-1" %>
+    <%= form.text_field :mentee_id_id, value: match.mentee.id,
+                       class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500"  %>
   </div>
 
-  <div>
-    <%= form.label :mentee_id_id, style: "display: block" %>
-    <%= form.text_field :mentee_id_id %>
-  </div>
-
-  <div>
-    <%= form.label :cohort_id_id, style: "display: block" %>
-    <%= form.text_field :cohort_id_id %>
-  </div>
-
-  <div>
-    <%= form.label :active, style: "display: block" %>
-    <%= form.check_box :active %>
-  </div>
-
-  <div>
-    <%= form.submit %>
+  <div class="flex justify-end">
+    <%= form.submit "Save Match",
+                    class: "bg-gray-800 hover:bg-black text-white font-semibold px-4 py-2 rounded-lg transition duration-300" %>
   </div>
 <% end %>
