--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -5,50 +5,74 @@
     Matches for <%=@cohort.cohort_name%>
   </h1>
 
-  <div class="overflow-x-auto rounded-lg shadow-lg"id="matches">
     <% if @matches.any?%>
       <% count = 1 %>
-      <table class="min-w-full bg-white border border-gray-300 divide-y divide-gray-200">
-        <thead class="bg-[#202020]">
-          <tr>
-            <th class="py-3 px-6 text-left text-md font-semibold text-white tracking-wider text-center">No.</th>
-            <th class="py-3 px-6 text-left text-md font-semibold text-white tracking-wider text-center">Mentor</th>
-            <th class="py-3 px-6 text-left text-md font-semibold text-white tracking-wider text-center">Mentee</th>
-            <th class="py-3 px-6 text-left text-md font-semibold text-white tracking-wider text-center">Matched Date</th>
-            <th class="py-3 px-6 text-left text-md font-semibold text-white tracking-wider text-center">Active</th>
-            <th class="py-3 px-6 text-left text-md font-semibold text-white tracking-wider text-center">Action</th>
-          </tr>
-        </thead>
-        <% @matches.each do |match| %>
-          <tbody class="divide-y divide-gray-200 text-align-center" id="members-container">
-            <tr class="member-item hover:bg-gray-50 text-center">
-              <td class="py-4 px-6 text-sm"><%= count %></td>
-              <td class="py-4 px-6 text-sm">
-                <%= match.mentor.name %>
-              </td>
-              <td class="py-4 px-6 text-sm">
-                <%= match.mentee.name %>
-              </td>
-              <td class="py-4 px-6 text-sm">
-                <% date = match.created_at %>
-                <%= date.strftime("%Y-%m-%d") %>
-              </td>
-              <td class="py-4 px-6 text-sm"><%= match.active ? "Yes" : "No" %></td>
-              <td class="py-4 px-6 text-sm text-gray-800">
-                <div class="flex flex-col space-y-2">
-                  <button type="button" class="text-yellow-600 hover:text-yellow-800 font-medium px-3 py-1 bg-yellow-50 rounded-md shadow-sm hover:bg-yellow-100 edit-button" >
+      <div class="overflow-x-auto rounded-lg shadow-lg"id="matches">
+        <table class="min-w-full bg-white border border-gray-300 divide-y divide-gray-200">
+          <thead class="bg-[#202020]">
+            <tr>
+              <th class="py-3 px-6 text-left text-md font-semibold text-white tracking-wider text-center">No.</th>
+              <th class="py-3 px-6 text-left text-md font-semibold text-white tracking-wider text-center">Mentor</th>
+              <th class="py-3 px-6 text-left text-md font-semibold text-white tracking-wider text-center">Mentee</th>
+              <th class="py-3 px-6 text-left text-md font-semibold text-white tracking-wider text-center">Matched Date</th>
+              <th class="py-3 px-6 text-left text-md font-semibold text-white tracking-wider text-center">Action</th>
+            </tr>
+          </thead>
+          <% @matches.each do |match| %>
+            <tbody class="divide-y divide-gray-200 text-align-center" id="members-container">
+              <tr class="member-item hover:bg-gray-50 text-center">
+                <td class="py-4 px-6 text-sm"><%= count %></td>
+                <td class="py-4 px-6 text-sm">
+                  <%= match.mentor.name %>
+                </td>
+                <td class="py-4 px-6 text-sm">
+                  <%= match.mentee.name %>
+                </td>
+                <td class="py-4 px-6 text-sm">
+                  <% date = match.updated_at %>
+                  <%= date.strftime("%Y-%m-%d") %>
+                </td>
+                <td class="py-4 text-sm text-gray-800">
+                  <button id="openModalBtn" class="text-yellow-600 hover:text-yellow-800 font-medium px-14 py-1 bg-yellow-50 rounded-md shadow-sm hover:bg-yellow-100 edit-button"
+                    onclick="openModal('edit_match_modal')">
                     Edit
                   </button>
-                </div>
-              </td>
-            </tr>
-          </tbody>
-          <% count += 1%>
-        <% end %>
-      </table>
+                </td>
+              </tr>
+            </tbody>
+            
+            <% count += 1%>
+
+            <!-- Modal Popups -->
+            <div id="edit_match_modal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
+              <div class="bg-white p-8 rounded-lg shadow-lg w-[30rem] relative">
+                <button class="absolute top-2 right-2 text-gray-500 hover:text-gray-700" onclick="closeModal('edit_match_modal')">
+                  <i class="fas fa-times"></i>
+                </button>
+                <%= render partial: "matches/form", locals: { match: match, cohort: @cohort, current_time_in_user_zone: @current_time_in_user_zone } %>
+              </div>
+            </div>
+          <% end %>
+        </table>
+      </div>
     <% else %>
-      <h1>No Matches for <%=@cohort.cohort_name %></h1>
+      <div class="overflow-x-auto rounded-lg">
+        <h1 class="py-3 px-6 text-left text-md font-semibold tracking-wider text-center">
+          No Matches for <%=@cohort.cohort_name %> yet!
+        </h1>
+      </div>
     <% end %>
-  </div>
-  <%# <%= link_to "New match", new_match_path %> 
 </div>
+
+<script>
+  function openModal(modalId) {
+    const modal = document.getElementById(modalId);
+    modal.classList.remove('hidden');
+    modal.classList.add('flex');
+  }
+  function closeModal(modalId) {
+    const modal = document.getElementById(modalId);
+    modal.classList.add('hidden');
+    modal.classList.remove('flex');
+  }
+ </script>
