made calender white

--- a/app/views/dashboard/_calendar.html.erb
+++ b/app/views/dashboard/_calendar.html.erb
@@ -1,10 +1,10 @@
 <div class="flex items-center justify-center px-4 md:w-[27.0625rem] sm:min-x[438px] sm:max-w-[438px]">
   <div class="max-w-sm w-full shadow-sm">
-    <div class="md:p-8 p-5 dark:bg-gray-800 bg-white rounded-[1rem]">
+    <div class="md:p-8 p-5 bg-white rounded-[1rem]">
       <h1 class="text-2xl font-semibold text-[#202020] mb-4"> Schedule </h1>
       <div class="flex items-center justify-between">
         <!--month-->
-        <span id="calendar-title" tabindex="0" class="focus:outline-none text-[0.8rem] font-regular dark:text-gray-100 text-[#202020]">October 2020</span>
+        <span id="calendar-title" tabindex="0" class="focus:outline-none text-[0.8rem] font-regular  text-[#202020]">October 2020</span>
         <!--prev forward icon-->
         <div class="flex items-center">
           <button id="prev-month" aria-label="calendar backward" class="focus:text-[#202020] hover:text-[#202020] text-[#DCDCDC]">
