--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -33,8 +33,8 @@
                   <%= date.strftime("%Y-%m-%d") %>
                 </td>
                 <td class="py-4 text-sm text-gray-800">
-                  <button id="openModalBtn" class="text-yellow-600 hover:text-yellow-800 font-medium px-14 py-1 bg-yellow-50 rounded-md shadow-sm hover:bg-yellow-100 edit-button"
-                    onclick="openModal('edit_match_modal')">
+                  <button id="openModalBtn" class="text-yellow-600 hover:text-yellow-800 font-medium px-14 py-1 bg-yellow-50 rounded-md shadow-sm hover:bg-yellow-100 edit-button" 
+                    onclick="openModal('<%=match.id%>_edit_match_modal')">
                     Edit
                   </button>
                 </td>
@@ -44,9 +44,9 @@
             <% count += 1%>
 
             <!-- Modal Popups -->
-            <div id="edit_match_modal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
+            <div id="<%=match.id%>_edit_match_modal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50 modal">
               <div class="bg-white p-8 rounded-lg shadow-lg w-[30rem] relative">
-                <button class="absolute top-2 right-2 text-gray-500 hover:text-gray-700" onclick="closeModal('edit_match_modal')">
+                <button class="absolute top-2 right-2 text-gray-500 hover:text-gray-700" onclick="closeModal('<%=match.id%>_edit_match_modal')">
                   <i class="fas fa-times"></i>
                 </button>
                 <%= render partial: "matches/form", locals: { match: match, cohort: @cohort, current_time_in_user_zone: @current_time_in_user_zone } %>
