--- a/app/views/matches/_table.html.erb
+++ b/app/views/matches/_table.html.erb
@@ -38,18 +38,8 @@
               </td>
             </tr>
           </tbody>
-          
-          <% count += 1%>
-
-          <!-- Edit Match Modal -->
-          <div id="<%=match.id%>_edit_match_modal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50 modal">
-            <div class="bg-white p-8 rounded-lg shadow-lg w-[30rem] relative">
-              <button class="absolute top-2 right-2 text-gray-500 hover:text-gray-700" onclick="closeModal('<%=match.id%>_edit_match_modal')">
-                <i class="fas fa-times"></i>
-              </button>
-              <%= render partial: "matches/form", locals: { match: match, cohort: @cohort, current_time_in_user_zone: @current_time_in_user_zone } %>
-            </div>
-          </div>
+          <% count += 1 %>
+          <%= render "matches/edit_match_modal", match: match %>
         <% end %>
       </table>
     </div>
