--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,11 +1,8 @@
 <div class="mt-20">
   <% if @role == "mentor" %>
-    <h1>Welcome, Mentor!</h1>
-    <% @mentors_data.each do |mentor| %>
-      <h3><%= mentor.id %></h3>
-    <% end %>
+    <%= render "dashboard/mentor/mentor_dashboard" %>
   <% elsif @role == "mentee" %>
-    <%= render partial: "mentee_dashboard", locals: { mentors_data: @mentors_data } %>
+    <%= render partial: "dashboard/mentee/mentee_dashboard", locals: { mentors_data: @mentors_data } %>
   <% elsif @role == "admin" %>
     <%= render partial: "admin_dashboard" %>
   <% else %>
