--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -1,6 +1,7 @@
 <div class="flex justify-center">
   <div class="bg-white rounded-xl shadow-md mt-[10rem] sm:w-1/3 w-[90%] p-4">
     <%= form_with(model: @meeting, local: true) do |form| %>
+      <%= form.hidden_field :match_id, value: @match.id %>
       <div class="p-4 md:p-5">
         <div class="grid gap-4 mb-4 grid-cols-2">
           <h3 class="text-lg font-semibold text-[#202020] dark:text-white">
