--- a/app/views/cohort_members/index.html.erb
+++ b/app/views/cohort_members/index.html.erb
@@ -1,6 +1,10 @@
 <div class="bg-gray-50 mt-20 mb-20">
   <div class="container mx-auto mt-20 px-4">
-    <h1 class="text-2xl font-bold text-black mb-6 text-left">Members of <%= @cohort.cohort_name if @cohort %></h1>
+   <div class="mb-5">
+    <h1 class="text-2xl font-bold text-black text-left">Members of <%= @cohort.cohort_name if @cohort %></h1>
+    <%= link_to "Back to dashboard", dashboard_path(role: "admin"), class: "text-gray-500 hover:text-black hover:underline" %>
+   </div>
+
     <div class="overflow-x-auto rounded-lg shadow-lg">
       <table class="min-w-full bg-white border border-gray-300 divide-y divide-gray-200">
         <thead class="bg-[#202020]">
