--- a/app/views/cohorts/index.html.erb
+++ b/app/views/cohorts/index.html.erb
@@ -1,7 +1,10 @@
-<!-- Cohorts Table -->
 <div class="bg-gray-50 mt-20">
   <div class="container mx-auto mt-20 px-4">
-    <h1 class="text-2xl font-bold text-black mb-6 text-left"><%= @program.name %> - Cohorts</h1>
+  <div class="mb-5">
+    <h1 class="text-2xl font-bold text-black text-left"><%= @program.name %> - Cohorts</h1>
+    <%= link_to "Back to dashboard", dashboard_path(role: "admin"), class: "text-gray-500 hover:text-black hover:underline" %>
+  </div>
+
     <div class="overflow-x-auto rounded-lg shadow-lg">
       <table class="min-w-full bg-white border border-gray-300 divide-y divide-gray-200">
         <thead class="bg-[#202020]">
@@ -112,7 +115,7 @@
     document.querySelectorAll(".delete-button").forEach((button) => {
       button.addEventListener("click", () => {
         const cohortId = button.dataset.cohortId;
-        deleteForm.action = `/cohorts/${cohortId}`; // Set form action dynamically
+        deleteForm.action = `/cohorts/${cohortId}`;
         deleteModal.classList.remove("hidden");
       });
     });
