--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,4 +1,4 @@
-<div class="alert alert-<%= css_class %> alert-dismissible fade show" role="alert">
+<div class="alert alert-<%= css_class %> alert-dismissible fade show fixed top-4 left-1/2 transform -translate-x-1/2 z-50" role="alert">
   <%= message %>
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
