adding templates to emails

--- a/app/views/cohort_mailer/shortlist_start_notification.html.erb
+++ b/app/views/cohort_mailer/shortlist_start_notification.html.erb
@@ -1,5 +1,1 @@
-<h1>Hi <%= @user.first_name %></h1>
-
-<p>Your cohort <%= @cohort.cohort_name %> shortlist is starting! </p>
-
-<p>MentE</p>
+<%= render "shortlist_open_email", user: @user, cohort: @cohort %>
