--- a/app/views/cohort_member_mailer/welcome_mail.text.erb
+++ b/app/views/cohort_member_mailer/welcome_mail.text.erb
@@ -1,9 +1,9 @@
 Welcome to MentE!
 ========================================================
 
-Thank you for volunteering as a mentor for Discovery Partners Institute's <%= @cohort.program.name %> <%= @cohort.cohort_name %>!
+You've been invited to Discovery Partners Institute's <%= @cohort.program.name %> <%= @cohort.cohort_name %>!
 
 Please follow this link to register your account: insert link.
 
 Yours Truly,
-    The MentE Team
+The MentE Team
